# cxx_utils

./: CMakeLists.txt  README.md
scripts/: build_and_run_unit_tests.bash
src/: CMakeLists.txt  main.cpp  test.hpp  thread_pool.cpp
src/CxxUtils/: defines.hpp  instance_counter.hpp  singleton.hpp  static_singleton.hpp  template_helpers.hpp  thread_pool.hpp  type_checks.hpp  type_list.hpp
src/CxxUtils/allocators/: big_chunk_thread_local_alloc.hpp  limited_thread_local_alloc.hpp
src/CxxUtils/data_types/: extended_map.hpp  extended_vector.hpp  listeners.hpp  multi_vector.hpp
tests/: extended_map.cpp  extended_vector.cpp  instance_counter.cpp  listeners.cpp  multi_vector.cpp  singleton.cpp  template_helpers.cpp  type_checks.cpp  type_list_test.cpp
